# epub2md

./: README.md  epub2md.cabal  stack.yaml
app/: Main.hs
src/: FileManager.hs  Lib.hs  NcxParser.hs  ParserCommons.hs  Unzip.hs  XhtmlParser.hs
test/: DataTests.hs  FileManagerTests.hs  LibTests.hs  NcxParserTests.hs  Spec.hs  XhtmlParserTests.hs
test/data/: sample1.md  sample1.xhtml  sample2.md  sample2.xhtml  tocsample1.md  tocsample1.ncx
test/data/some/unreachable/path/: unreachable.xhtml
