name:                epub2md
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/epub2md#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , FileManager
                     , Unzip
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filemanip
                     , filepath
                     , process
                     , tagsoup
                     , text
  default-language:    Haskell2010

executable epub2md
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , epub2md
  default-language:    Haskell2010

test-suite epub2md-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LibTests
                     , DataTests
                     , FileManagerTests
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , tagsoup
                     , text
                     , epub2md
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/epub2md
